--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+<script data-goatcounter="https://sccmap.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Global AI Regulations & Frameworks Map - February 2026</title>
